# ComfyUI-SBTools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
comfyui_manager_registration/: README.md  SUBMISSION_GUIDE.md  custom-node-list-entry.json
examples/: Variable Prompt and Image.json  Variable Prompt.json
nodes/: alpha_to_chroma_key.py  birefnet_node.py  find_unused_color.py  image_variable.py  multi_compiler.py  prompt_compiler.py  prompt_variable.py  variable_combiner.py
