[project]
name = "comfyui-sbtools"
description = "Workflow toolkit for ComfyUI. Background removal (BiRefNet), dynamic prompt/image variable system for batch generation, chroma key tools, and more utilities."
version = "1.3.0"
license = {file = "LICENSE"}
dependencies = ["huggingface_hub>=0.19.0"]

[project.urls]
Repository = "https://github.com/Amatsukast/ComfyUI-SBTools"

[tool.comfy]
PublisherId = "Amatsukast"
DisplayName = "ComfyUI-SBTools"
Icon = ""
